# inkscape-microgestures

./: .gitignore  LICENSE  README.md  _config.yml  index.md  pyproject.toml  requirements.txt  temp_config_file.csv  test.py
.github/workflows/: deploy-docs.yml
docs/: README_map_commands.md  add-enhancement.md  add-legend.md  complete-occlusion-adaptation.md  create-representations.md  experiment-help-interface.md  experiment-simultaneous-representations.md  export-hand-poses.md  inkscape-installation-steps.md  map-commands.md
microrep/: __init__.py
microrep/add_enhancement/: README.md
microrep/add_enhancement/add_enhancement/: add_enhancement.py
microrep/add_legend/: README.md
microrep/add_legend/add_legend/: __init__.py  add_legend.py
microrep/complete_occlusion_adaptation/: README.md
microrep/complete_occlusion_adaptation/complete_occlusion_adaptation/: __init__.py  complete_occlusion_adaptation.py
microrep/complete_occlusion_adaptation/example/: config.csv
microrep/core/: export.py  mg_maths.py  ref_and_specs.py  utils.py
microrep/create_representations/: README.md  create_representations.inx
microrep/create_representations/create_representations/: configuration_file.py  create_mg_rep.py  create_representations.py
microrep/create_representations/example/: config.csv
microrep/export_hand_poses/: README.md  export_hand_poses.inx
microrep/map_commands/: map_commands.inx
src/microrep/: __init__.py  complete_occlusion_adaptation.inx
tests/experiment_help_interface/: README.md  setup_experiment.py
tests/experiment_simultaneous_representations/: README.md  setup_experiment.py
tests/test_add_enhancement/: test.py
tests/test_add_legend/: test.py
tests/test_add_overlap_adaptation/: test.py
tests/test_complete_occlusion_adaptation/: test.py
tests/test_create/: test.py
tests/test_create_simultaneous_representations/: config.csv  test.py
tests/test_create_single-picture_representations/: test.py
tests/test_export_hand_pose/: test.py
tests/test_export_hand_poses/: test.py
tests/test_final_design/: setup_experiment.py
tests/test_map_commands/: test.py
tests/test_map_commands_with_text/: config.csv  test.py
(+36 files in other folders)
