[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microrep"
version = "0.0.0"
authors = [{ name="Vincent Lambert", email="vincent.lambert29@gmail.com" }]
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "MIT",
    "Operating System :: OS Independent",
]
keywords = ["microgesture", "representation", "illustration", "hand", "fingers", "gesture"]
description = "An Inkscape extension with allows to create and modify hand postures and representations of hand microgestures with or without the associated commands. This work has been initiated for the experiences presented in the paper 'Studying the Simultaneous Representations of Microgestures' published by MobileHCI 2024."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    "inkex","lxml","numpy","Shapely","svg.path"
]

[project.urls]
Homepage = "https://github.com/Vincent-LAMBERT/inkscape-microgestures"
Issues = "https://github.com/Vincent-LAMBERT/inkscape-microgestures/issues"

[tool.setuptools.packages.find]
where = ["src"]